Allow multiple signing keys to be provided
Signed-off-by: Stephen Crawford <steecraw@amazon.com>